--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -9,13 +9,6 @@
         class="flex flex-shrink-0 items-center p-1 space-x-1 border-b-2 overflow-y-clip h-fit bg-menu-200 border-menu-300"
       >
         <div
-          class="flex items-center font-semibold w-fit px-1 py-0.5 border bg-menu-100 hover:bg-menu-50 hover:cursor-pointer rounded border-menu-500"
-          (click)="settings = !settings"
-        >
-          <gear-svg class="w-5"></gear-svg>
-          <compact-svg [up]="settings"></compact-svg>
-        </div>
-        <div
           class="flex w-full p-0.5 space-x-1 overflow-x-auto scrollbar-hidden"
         >
           @for (draftCtrl of draftArray.controls; track $index) {
@@ -57,338 +50,88 @@
       </div>
       <div
         [formGroup]="getDraftFormGroup()"
-        class="flex flex-col flex-grow overflow-auto"
+        class="flex min-h-0 overflow-auto h-full divide-x-4 divide-menu-200"
       >
-        @if (settings) {
-          <div
-            @growIn
-            class="flex flex-wrap items-center px-2 pb-1 space-x-4 space-y-1 text-sm border-b-2 md:text-base border-menu-300 rounded-b-xl bg-menu-200"
-          >
-            <div class="space-x-1">
-              <label for="format" class="font-bold">Format</label>
-              <select
-                formControlName="format"
-                class="p-0.5 font-semibold rounded bg-menu-100"
-                id="format"
-              >
-                <option value="" disabled selected>Select Format</option>
-                @for (format of formats; track $index) {
-                  <option value="{{ format }}">
-                    {{ format }}
-                  </option>
-                }
-              </select>
-            </div>
-
-            <div class="space-x-1">
-              <label for="ruleset" class="font-bold">Ruleset</label>
-              <select
-                formControlName="ruleset"
-                class="p-0.5 font-semibold rounded bg-menu-100"
-                id="ruleset"
-              >
-                <option value="" disabled selected>Select Ruleset</option>
-                @for (ruleset of rulesets; track $index) {
-                  <option value="{{ ruleset }}">
-                    {{ ruleset }}
-                  </option>
-                }
-              </select>
-            </div>
-
-            <div class="space-x-1">
-              <label for="min" class="font-bold">Min</label>
-              <input
-                type="number"
-                class="w-12 p-0.5 font-semibold text-center rounded bg-menu-100"
-                formControlName="min"
-                id="min"
-                min="0"
-                max="18"
-              />
-            </div>
-
-            <div class="space-x-1">
-              <label for="max" class="font-bold">Max</label>
-              <input
-                type="number"
-                class="w-12 p-0.5 font-semibold text-center rounded bg-menu-100"
-                formControlName="max"
-                id="max"
-                min="0"
-                max="18"
-              />
-            </div>
-
-            <div class="space-x-1">
-              <label for="tier" class="font-bold">Tier</label>
-              <select
-                formControlName="system"
-                class="w-20 p-0.5 font-semibold rounded bg-menu-100"
-              >
-                <option value="" disabled selected>Select Value Type</option>
-                <option value="points">Points</option>
-                <option value="tiers">Tiers</option>
-              </select>
-            </div>
-            @if (isPoints) {
-              <div>
-                <label class="font-bold" for="totalPoints">Total Points</label>
-                <input
-                  type="number"
-                  class="w-16 font-semibold p-0.5 rounded bg-menu-100"
-                  formControlName="totalPoints"
-                  id="totalPoints"
-                />
-              </div>
-            }
-            <button
-              class="p-0.5 border-2 text-sm font-semibold rounded hover:bg-menu-300 bg-menu-100 border-menu-400"
-              [routerLink]="['/', draftPath, 'new']"
-              [queryParams]="{
-                team: team,
-                format: getDraftFormGroup().get('format')?.value,
-                ruleset: getDraftFormGroup().get('ruleset')?.value,
-              }"
-            >
-              Save to New League
-            </button>
-          </div>
-        }
-        <div class="flex flex-grow min-h-0 divide-x-4 divide-menu-200">
-          <div
-            class="flex-col flex-shrink-0 hidden divide-y-2 w-96 divide-menu-200 md:flex"
-          >
-            <div class="flex-grow min-h-0 p-1 overflow-y-auto">
-              <div
-                class="sticky flex items-center w-full font-semibold border-b-2 border-menu-300"
-              >
-                <div class="w-1/6 h-full"></div>
-                <div class="w-5/12">Name</div>
-                <div class="w-1/6 text-center">Value</div>
-                <div class="text-xs text-center w-1/8">Captain</div>
-                <div class="text-xs text-center w-1/8">Drafted</div>
-              </div>
-              <div formArrayName="team" class="grid w-full grid-cols-1">
-                @for (teamCtrl of teamFormArray.controls; track $index) {
-                  <div
-                    [formGroupName]="$index"
-                    class="flex items-center space-y-1"
-                  >
-                    <div class="w-1/6 h-fit">
-                      <sprite
-                        [pokemon]="{
-                          id: teamCtrl.get('id')?.value,
-                          name: teamCtrl.get('name')?.value,
-                        }"
-                      ></sprite>
-                    </div>
-                    <div class="flex flex-col justify-center w-5/12 h-full p-2">
-                      <div
-                        class="w-full text-sm border rounded-lg text-ellipsis bg-menu-100"
-                        [ngClass]="minMaxStyle($index)"
-                      >
-                        <select-search
-                          (itemSelected)="resultSelected(teamCtrl, $event)"
-                          [items]="names"
-                          [startItem]="teamCtrl.value"
-                          placeholder="Select Pokemon"
-                        ></select-search>
-                      </div>
-                    </div>
-                    @if (isPoints) {
-                      <div
-                        class="flex flex-col justify-center w-1/6 h-full p-1"
-                      >
-                        <input
-                          type="number"
-                          placeholder="0"
-                          class="w-full px-1 py-1 text-center border rounded-lg bg-menu-100"
-                          [ngClass]="minMaxStyle($index)"
-                          formControlName="value"
-                        />
-                      </div>
-                    } @else {
-                      <div
-                        class="flex flex-col justify-center w-1/6 h-full p-1"
-                      >
-                        <input
-                          type="text"
-                          spellcheck="false"
-                          [ngClass]="minMaxStyle($index)"
-                          class="w-full px-1 py-1 font-semibold text-center border rounded-lg bg-menu-100"
-                          formControlName="tier"
-                        />
-                      </div>
-                    }
-
-                    <div class="w-1/8">
-                      <input
-                        type="checkbox"
-                        class="w-full"
-                        formControlName="capt"
-                      />
-                    </div>
-                    <div class="w-1/8">
-                      <input
-                        type="checkbox"
-                        class="w-full"
-                        formControlName="drafted"
-                      />
-                    </div>
-                  </div>
-                }
-              </div>
-            </div>
-            @if (isPoints) {
-              <div class="p-1">
-                <div>Points Remaining: {{ remainingPoints }}</div>
-                <div>
-                  Average Remaining Cost:
-                  {{ remainingPoints / remainingPokemon | number: "1.0-2" }}
-                </div>
-              </div>
-            }
-          </div>
-          <mat-tab-group
-            mat-stretch-tabs="false"
-            class="w-full h-full overflow-auto"
-            mat-align-tabs="start"
-          >
-            @if (!isMediumScreen) {
-              <mat-tab label="Team" class="hide-on-big">
-                <div class="flex-grow block min-h-0 p-1 overflow-y-auto">
-                  <div
-                    class="sticky flex w-full space-x-3 font-semibold border-b-2 border-menu-300"
-                  >
-                    <div class="w-1/6 h-full"></div>
-                    <div class="w-5/12">Name</div>
-                    <div class="w-1/6 text-xs text-center">Value</div>
-                    <div class="text-xs text-center w-1/8">Captain</div>
-                    <div class="text-xs text-center w-1/8">Drafted</div>
-                  </div>
-                  <div formArrayName="team" class="grid w-full grid-cols-1">
-                    @for (teamCtrl of teamFormArray.controls; track $index) {
-                      <div
-                        [formGroupName]="$index"
-                        class="flex items-center space-y-1"
-                      >
-                        <div class="w-1/6 h-fit">
-                          <sprite
-                            [pokemon]="{
-                              id: teamCtrl.get('id')?.value,
-                              name: teamCtrl.get('name')?.value,
-                            }"
-                          ></sprite>
-                        </div>
-                        <div
-                          class="flex flex-col justify-center w-5/12 h-full p-2"
-                        >
-                          <div
-                            class="w-full text-sm border rounded-lg text-ellipsis bg-menu-100"
-                            [ngClass]="minMaxStyle($index)"
-                          >
-                            <select-search
-                              (itemSelected)="resultSelected(teamCtrl, $event)"
-                              [items]="names"
-                              [startItem]="teamCtrl.value"
-                              placeholder="Select Pokemon"
-                            ></select-search>
-                          </div>
-                        </div>
-
-                        @if (isPoints) {
-                          <div
-                            class="flex flex-col justify-center w-1/6 h-full p-1"
-                          >
-                            <input
-                              type="number"
-                              placeholder="0"
-                              class="w-full px-1 py-1 text-center border rounded-lg bg-menu-100"
-                              [ngClass]="minMaxStyle($index)"
-                              formControlName="value"
-                            />
-                          </div>
-                        } @else {
-                          <div
-                            class="flex flex-col justify-center w-1/6 h-full p-1"
-                          >
-                            <input
-                              type="text"
-                              spellcheck="false"
-                              [ngClass]="minMaxStyle($index)"
-                              class="w-full px-1 py-1 font-semibold text-center border rounded-lg bg-menu-100"
-                              formControlName="tier"
-                            />
-                          </div>
-                        }
-                        <div class="w-1/8">
-                          <input
-                            type="checkbox"
-                            class="w-full"
-                            formControlName="capt"
-                          />
-                        </div>
-                        <div class="w-1/8">
-                          <input
-                            type="checkbox"
-                            class="w-full"
-                            formControlName="drafted"
-                          />
-                        </div>
-                      </div>
-                    }
-                  </div>
-                </div>
-              </mat-tab>
-            }
-            @if (summary) {
-              <mat-tab label="Summary">
-                <summary class="h-full list-none" [summary]="summary"></summary>
-              </mat-tab>
-            }
-            @if (typechart && recommended) {
-              <mat-tab label="Typechart">
-                <typechart
-                  class="h-full max-w-full"
-                  [typechart]="typechart"
-                  [recommended]="recommended"
-                ></typechart
-              ></mat-tab>
-            }
-            @if (movechart.length) {
-              <mat-tab label="Moves">
-                <moves
-                  class="w-full overflow-y-auto"
-                  [movechart]="movechart"
-                ></moves>
-              </mat-tab>
-            }
-            @if (coverage) {
-              <mat-tab label="Coverage">
-                <planner-coverage
-                  class="w-full overflow-y-auto"
-                  [coverage]="coverage"
-                ></planner-coverage>
-              </mat-tab>
-            }
-            <mat-tab label="Find">
-              <finder-core
-                class="h-full min-w-full overflow-y-auto"
-                [rulesetId]="
-                  getDraftFormGroup().get('ruleset')?.value || 'Gen9 NatDex'
-                "
-                [formatId]="
-                  getDraftFormGroup().get('format')?.value || 'Singles'
-                "
-              ></finder-core>
+        @if (isLargeScreen) {
+          <mat-tab-group mat-stretch-tabs="false" class="w-1/3 flex-grow-0">
+            <mat-tab label="Team">
+              <planner-team
+                [teamArray]="getDraftFormGroup().controls.team"
+                [min]="getDraftFormGroup().controls.min.value"
+              ></planner-team>
+            </mat-tab>
+            <mat-tab label="Settings">
+              <planner-settings
+                [draftFormGroup]="getDraftFormGroup()"
+              ></planner-settings>
             </mat-tab>
           </mat-tab-group>
-        </div>
+        }
+        <mat-tab-group
+          mat-stretch-tabs="false"
+          class="flex-grow h-full overflow-auto"
+          mat-align-tabs="start"
+        >
+          @if (!isLargeScreen) {
+            <mat-tab label="Team">
+              <planner-team
+                [teamArray]="getDraftFormGroup().controls.team"
+                [min]="getDraftFormGroup().controls.min.value"
+              ></planner-team>
+            </mat-tab>
+            <mat-tab label="Settings">
+              <planner-settings
+                [draftFormGroup]="getDraftFormGroup()"
+              ></planner-settings>
+            </mat-tab>
+          }
+          @if (summary) {
+            <mat-tab label="Summary">
+              <summary class="h-full list-none" [summary]="summary"></summary>
+            </mat-tab>
+          }
+          @if (typechart && recommended) {
+            <mat-tab label="Typechart">
+              <typechart
+                class="h-full max-w-full"
+                [typechart]="typechart"
+                [recommended]="recommended"
+              ></typechart
+            ></mat-tab>
+          }
+          @if (movechart.length) {
+            <mat-tab label="Moves">
+              <moves
+                class="w-full overflow-y-auto"
+                [movechart]="movechart"
+              ></moves>
+            </mat-tab>
+          }
+          @if (coverage) {
+            <mat-tab label="Coverage">
+              <planner-coverage
+                class="w-full overflow-y-auto"
+                [coverage]="coverage"
+              ></planner-coverage>
+            </mat-tab>
+          }
+          <mat-tab label="Find">
+            <finder-core
+              class="h-full min-w-full overflow-y-auto"
+              [rulesetId]="
+                getDraftFormGroup().controls.ruleset.value || 'Gen9 NatDex'
+              "
+              [formatId]="
+                getDraftFormGroup().controls.format.value || 'Singles'
+              "
+            ></finder-core>
+          </mat-tab>
+        </mat-tab-group>
       </div>
     </div>
   </form>
 } @else {
   <loading></loading>
 }
+
 <!-- {{ plannerForm.value | json }} {{ tabSelected | json }} -->
