--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -25,9 +25,7 @@
       </button>
     }
   </div>
-  <div
-    class="max-w-full p-2 font-bold text-center rounded-full bg-caution w-fit"
-  >
+  <div>
     The replay analyzer is currently still in testing. If you find errors,
     please share the replay on our
     <a
@@ -39,7 +37,7 @@
   </div>
   <!-- <loading *ngIf="analyzed && !replayData"></loading> -->
   <mat-card *ngIf="replayData" class="w-full p-2 max-w-7xl">
-    <mat-card-title class="flex space-x-4 p-1 text-lg columns-4">
+    <mat-card-title class="flex space-x-4 p-2 text-lg columns-4">
       <div class="flex space-x-1">
         <label class="font-semibold text-symbolColor-sub" for="format">
           Format:
@@ -69,15 +67,15 @@
       </div>
     </mat-card-title>
     <mat-card-content
-      class="flex flex-col items-center p-2 border-2 max-w-full w-fit bg-menu-100 rounded-xl border-menu-400"
+      class="flex flex-col items-center p-2 border-2 max-w-full w-full bg-menu-100 rounded-xl border-menu-400"
     >
-      <div class="space-y-4 w-fit max-w-full">
+      <div class="space-y-4 w-full max-w-full pt-3">
         <div
           *ngFor="let player of replayData.stats; let playerNum = index"
           [ngClass]="playerClass(playerNum + 1)"
-          class="p-1 border rounded border-menu-400"
+          class="p-4 border border-menu-400 rounded-lg"
         >
-          <div class="flex space-x-2 items-end flex-wrap pb-2">
+          <div class="flex space-x-2 items-end flex-wrap pb-6">
             <div class="text-xl font-bold">{{ player.username }}</div>
           </div>
           <div class="flex space-x-2">
@@ -86,38 +84,46 @@
                 <span class="font-semibold">Kills:</span>
                 {{ player.total.kills }}
               </div>
+              <mat-divider></mat-divider>
               <div>
                 <span class="font-semibold">Deaths:</span>
                 {{ player.total.deaths }}
               </div>
+              <mat-divider></mat-divider>
               <div>
                 <span class="font-semibold">Damage Dealt:</span>
                 {{ player.total.damageDealt | number: "1.0-0" }}%
               </div>
+              <mat-divider></mat-divider>
               <div>
                 <span class="font-semibold">Damage Taken:</span>
                 {{ player.total.damageTaken | number: "1.0-0" }}%
               </div>
+              <mat-divider></mat-divider>
               <div>
                 <span class="font-semibold"> Total Accuracy: </span>
                 {{ player.luck.moves.actual | percent }} ({{
                   player.luck.moves.hits
                 }}/{{ player.luck.moves.total }})
               </div>
+              <mat-divider></mat-divider>
               <div>
                 <span class="font-semibold"> Expected Accuracy: </span>
                 {{ player.luck.moves.expected | percent }}
               </div>
+              <mat-divider></mat-divider>
               <div>
                 <span class="font-semibold"> Total Crits: </span>
                 {{ player.luck.crits.actual | percent }} ({{
                   player.luck.crits.hits
                 }}/{{ player.luck.crits.total }})
               </div>
+              <mat-divider></mat-divider>
               <div>
                 <span class="font-semibold"> Expected Crits: </span>
                 {{ player.luck.crits.expected | percent }}
               </div>
+              <mat-divider></mat-divider>
               <div *ngIf="player.luck.status.total > 0">
                 <div>
                   <span class="font-semibold"> Total Fully Parad: </span>
@@ -125,6 +131,7 @@
                     player.luck.status.full
                   }}/{{ player.luck.status.total }})
                 </div>
+                <mat-divider></mat-divider>
                 <div>
                   <span class="font-semibold"> Expected Fully Parad: </span>
                   {{ player.luck.status.expected | percent }}
@@ -134,21 +141,28 @@
             </div>
             <div class="w-full flex justify-center">
               <div class="w-full grid grid-cols-3 gap-2">
-                <mat-card *ngFor="let mon of player.team" class="p-1">
+                <mat-card *ngFor="let mon of player.team" class="p-1 w-fit">
                   <mat-card-header class="justify-center">
-                    <mat-card-title class="w-20">
-                      <pdz-sprite title="{{ mon.formes[0].detail }}"
+                    <mat-card-title class="w-20 pb-5">
+                      <pdz-sprite
+                        title="{{ mon.formes[0].detail }}"
                         [pid]="mon.formes[0].id"
                         [disabled]="mon.fainted"
                       ></pdz-sprite>
                     </mat-card-title>
                   </mat-card-header>
-                  <mat-card-content>
-                    <div *ngIf="!mon.kills[1]">
+                  <mat-card-content class="!grid !grid-cols-2 gap-x-4 gap-y-2">
+                    <div
+                      *ngIf="!mon.kills[1]"
+                      class="p-2 border rounded-lg border-menu-400"
+                    >
                       <span class="font-semibold"> Kills: </span>
                       {{ mon.kills[0] }}
                     </div>
-                    <div *ngIf="mon.kills[1]">
+                    <div
+                      *ngIf="mon.kills[1]"
+                      class="p-2 border rounded-lg border-menu-400"
+                    >
                       <span class="font-semibold"> Kills: </span>
                       <div>
                         <span> Direct: </span>
@@ -159,11 +173,17 @@
                         {{ mon.kills[1] }}
                       </div>
                     </div>
-                    <div *ngIf="!mon.damageDealt[1]">
+                    <div
+                      *ngIf="!mon.damageDealt[1]"
+                      class="p-2 border rounded-lg border-menu-400"
+                    >
                       <span class="font-semibold"> Damage Dealt: </span>
                       {{ mon.damageDealt[0] | number: "1.0-0" }}%
                     </div>
-                    <div *ngIf="mon.damageDealt[1]">
+                    <div
+                      *ngIf="mon.damageDealt[1]"
+                      class="p-2 border rounded-lg border-menu-400"
+                    >
                       <span class="font-semibold"> Damage Dealt: </span>
                       <div>
                         <span> Direct: </span>
@@ -174,11 +194,17 @@
                         {{ mon.damageDealt[1] | number: "1.0-0" }}%
                       </div>
                     </div>
-                    <div *ngIf="!mon.damageTaken[1]">
+                    <div
+                      *ngIf="!mon.damageTaken[1]"
+                      class="p-2 border rounded-lg border-menu-400"
+                    >
                       <span class="font-semibold"> Damage Taken: </span>
                       {{ mon.damageTaken[0] | number: "1.0-0" }}%
                     </div>
-                    <div *ngIf="mon.damageTaken[1]">
+                    <div
+                      *ngIf="mon.damageTaken[1]"
+                      class="p-2 border rounded-lg border-menu-400"
+                    >
                       <span class="font-semibold"> Damage Taken: </span>
                       <div>
                         <span> Direct: </span>
@@ -189,11 +215,14 @@
                         {{ mon.damageTaken[1] | number: "1.0-0" }}%
                       </div>
                     </div>
-                    <div>
+                    <div class="p-2 border rounded-lg border-menu-400">
                       <span class="font-semibold"> HP Restored: </span>
                       {{ mon.hpRestored | number: "1.0-0" }}%
                     </div>
-                    <div *ngIf="mon.moveset && mon.moveset.length > 0">
+                    <div
+                      *ngIf="mon.moveset && mon.moveset.length > 0"
+                      class="p-2 border rounded-lg border-menu-400 col-span-2"
+                    >
                       <!-- <ul class="list-disc pl-4">
                       <li *ngFor="let move of mon.moveset">{{ move }}</li>
                     </ul> -->
